Fix layout issues

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,7 +13,6 @@
 }
 
 .quizmkr-logo {
-  display: flex;
   flex-direction: row;
   align-items: center;
   width: 100%;
