--- a/src/app/components/assessment/running/running.component.scss
+++ b/src/app/components/assessment/running/running.component.scss
@@ -28,11 +28,6 @@ sl-radio + sl-radio {
   padding-bottom: 1rem;
 }
 
-.question-card-header {
-  display: flex;
-  white-space: nowrap;
-}
-
 .image-placeholder {
   display: flex;
   align-items: center;
